k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sw-api-deployment
  labels:
    app: sw-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sw-api
  template:
    metadata:
      labels:
        app: sw-api
    spec:
      containers:
        - name: sw-api
          image: sw-api:v2.2
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 100m
              memory: 600Mi
            requests:
              cpu: 50m
              memory: 250Mi
