k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: sw-api-svc
spec:
  selector:
    app: sw-api
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 9090
