k8s/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sw-api-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /sw
            pathType: Prefix
            backend:
              service:
                name: sw-api-svc
                port:
                  number: 80
